Added more meaningful info about add-opens